@@ -1,5 +1,9 @@
 2013-11-07  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* ViewportLayer.wrl: 
+
+2013-11-07  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Library.mdproj:
 	* Viewport.wrl:
 	* ClipPlane.wrl:
